tests/ui/nll/trait-associated-constant.stderr
error[E0308]: const not compatible with trait
  --> $DIR/trait-associated-constant.rs:21:5
   |
LL |     const AC: Option<&'c str> = None;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^ lifetime mismatch
   |
   = note: expected enum `Option<&'b _>`
              found enum `Option<&'c _>`
note: the lifetime `'c` as defined here...
  --> $DIR/trait-associated-constant.rs:20:18
   |
LL | impl<'a: 'b, 'b, 'c> Anything<'a, 'b> for FailStruct {
   |                  ^^
note: ...does not necessarily outlive the lifetime `'b` as defined here
  --> $DIR/trait-associated-constant.rs:20:14
   |
LL | impl<'a: 'b, 'b, 'c> Anything<'a, 'b> for FailStruct {
   |              ^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
